--- a/assets/css/styleday.css
+++ b/assets/css/styleday.css
@@ -123,13 +123,22 @@ td {
 
 
 }
-
+.span {
+    color: black;
+}
 .ierus, .prioksk, .zarajsk, .borodino {
     text-align: center;
     background-image: url("../image/bckgrattr1day.jpg");
     background-size: cover;
     color: black;
     font-size: 30px;
+}
+.footer1 {
+    display: flex;
+    height: 100px;
+    justify-content: space-between;
+    border-top: 2px solid black;
+    padding-top: 20px;
 }
 @media (max-width: 1024px) {
     .biogrid {
@@ -196,5 +205,4 @@ td {
         font-size: medium;
     }
 }
-
 
