--- a/mySite/assets/css/nightStyle.css
+++ b/mySite/assets/css/nightStyle.css
@@ -18,6 +18,16 @@ img{
     flex-wrap: wrap;
     gap: 20px;
     padding: 20px;
+    position: relative;
+}
+.container-footer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
 }
 .container {
     display: flex;
@@ -62,6 +72,7 @@ img{
 .mgn-photo1,.mgn-photo2,.mgn-photo3,.mgn-photo4{
     padding: 40px ;
     background-color: dimgray;
+    border: 1px solid black;
 }
 .tyl,.palatka,.hram,.arena {
     text-align: center;
@@ -76,9 +87,20 @@ img{
     padding: 30px;
     background-color: dimgray;
     text-align: center;
+    border: 1px solid black;
 }
 .theme1,.theme2,.theme3{
     font-size: 24px;
+}
+.theme1 {
+    position: absolute;
+    top: 50%;
+    left: 150px;
+}
+.theme2 {
+    position: absolute;
+    top: 50%;
+    left: 400px;
 }
 @media screen and (max-width:800px){
     .main{
