--- a/siteZasyadko/assets/css/styleSite.css
+++ b/siteZasyadko/assets/css/styleSite.css
@@ -14,7 +14,8 @@
     font-size: 80px;
     margin-bottom: 20px;
 }
-.topic1{
+
+.topic1 {
     text-align: left;
 }
 
@@ -28,6 +29,7 @@
     font-size: 16px;
     color: #777;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .about {
@@ -115,7 +117,6 @@ body {
 }
 
 
-
 .footer {
     margin-top: 50px;
     padding: 15px;
@@ -124,67 +125,102 @@ body {
     color: #fff;
     border-radius: 5px;
 }
-.box1{
+
+.box1 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-evenly;
     gap: 20px;
 }
-.sight{
+
+.sight {
     text-align: center;
 }
-.box2{
+
+.box2 {
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(2, 500px);
     grid-template-rows:repeat(2, 500px);
     grid-gap: 30px;
 }
-.photo1{
+
+.photo1 {
     width: 300px;
     height: 300px;
     text-align: center;
     padding-top: 50px;
 }
-.photo2{
+
+.photo2 {
     width: 300px;
     height: 300px;
     text-align: center;
     padding-top: 50px;
 }
-.photo3{
+
+.photo3 {
     width: 300px;
     height: 300px;
     text-align: center;
     padding-top: 5px;
 }
-.photo4{
+
+.photo4 {
     width: 300px;
     height: 300px;
     text-align: center;
     padding-top: 5px;
 }
-.sight2{
+
+.sight2 {
     text-align: center;
 }
-@media (max-width: 480px){
-    .header h1{
+
+.one {
+    text-align: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.avatar {
+    text-align: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.about2 {
+    text-align: center;
+}
+
+.name {
+    text-align: center;
+    font-weight: bold;
+}
+
+@media (max-width: 480px) {
+    .header h1 {
         font-size: 18px;
     }
-    .description{
+
+    .description {
         font-size: 12px;
     }
-    .project-title{
+
+    .project-title {
         font-size: 16px;
     }
-    .project-description{
+
+    .project-description {
         font-size: 12px;
     }
-    .arrow{
+
+    .arrow {
         font-size: 16px;
     }
 }
+
 @media (max-width: 768px) {
     .container {
         padding: 15px;
