Сделал хедер и футер, а также задание с циклами

--- a/mysite/assets/style/nightTheme.css
+++ b/mysite/assets/style/nightTheme.css
@@ -1,3 +1,4 @@
+
 .head {
     display: flex;
     width: 100%;
@@ -29,6 +30,12 @@ body {
     background-color: black;
 
 }
+
+.end {
+     color: mintcream;
+    font-size: 30px;
+    border-top: 1px solid mintcream;
+ }
 
 .dost {
     text-align: center;
@@ -73,6 +80,12 @@ body {
     color: black;
 }
 
+
+.cycles {
+    color: mintcream;
+    font-size: 24px;
+}
+
 /*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*/
 
 .logo {
@@ -93,6 +106,16 @@ body {
 .chelyab {
     width: 600px;
     height: 500px;
+}
+
+.gitIcon {
+    width: 200px;
+    height: 200px;
+}
+
+.vkIcon {
+    width: 200px;
+    height: 200px;
 }
 
 /*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*/
@@ -153,6 +176,20 @@ body {
     grid-gap: 30px;
 
 }
+
+.foot {
+    display: flex;
+    flex-direction: row;
+}
+
+.cyclesContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+
+
 
 /*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*/
 
