--- a/mysite/assets/style/styles.css
+++ b/mysite/assets/style/styles.css
@@ -1,16 +1,3 @@
-.head {
-    display: flex;
-    width: 100%;
-}
-
-#menu ul {
-    display: flex;
-    flex-direction: row;
-    gap: 100px;
-    width: 100%;
-    flex-wrap: nowrap;
-
-}
 
 ul {
     list-style: none;
@@ -30,6 +17,10 @@ body {
 
 }
 
+.end {
+    font-size: 30px;
+    border-top: 1px solid black;
+}
 .dost {
     text-align: center;
     color: yellow;
@@ -71,6 +62,10 @@ body {
     text-align: center;
 }
 
+h2 {
+    color: black;
+}
+
 /*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*/
 
 .logo {
@@ -93,10 +88,33 @@ body {
     height: 500px;
 }
 
+.gitIcon {
+    width: 200px;
+    height: 200px;
+}
+
+.vkIcon {
+    width: 200px;
+    height: 200px;
+}
+
 /*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*/
 
 
 /*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*/
+.head {
+    display: flex;
+    width: 100%;
+}
+
+#menu ul {
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+    width: 100%;
+    flex-wrap: nowrap;
+
+}
 .fio {
     color: yellow;
     text-align: center;
@@ -148,6 +166,17 @@ body {
     grid-template-rows: repeat(2, 900px);
     grid-gap: 30px;
 
+}
+
+.foot {
+    display: flex;
+    flex-direction: row;
+}
+
+.cyclesContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 /*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*//*Контейнеры*/
