--- a/public/assets/styles/footer.css
+++ b/public/assets/styles/footer.css
@@ -1,10 +1,13 @@
 .footer__container {
-	max-width: var(--layout-width);
-	margin: 0 auto;
-	padding: 4rem 2rem;
+    max-width: var(--layout-width);
+    margin: 0 auto;
+    padding: 4rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .footer {
-	box-shadow: 0px 0px 1.4rem var(--color-shadow);
-	flex-grow: 0;
+    box-shadow: 0px 0px 1.4rem var(--color-shadow);
+    flex-grow: 0;
 }
