--- a/public/assets/styles/header.css
+++ b/public/assets/styles/header.css
@@ -1,73 +1,74 @@
 .root {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .header__container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	max-width: var(--layout-width);
-	margin: 0 auto;
-	padding: 2.5rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: var(--layout-width);
+    margin: 0 auto;
+    padding: 2.5rem 2rem;
 }
 
 .header {
-	box-shadow: 0px 0px 1.4rem var(--color-shadow);
-	margin-bottom: 4rem;
+    box-shadow: 0px 0px 1.4rem var(--color-shadow);
+    margin-bottom: 4rem;
 }
 
 .menu__mobile-button {
-	display: none;
-	background: none;
-	border: none;
-	cursor: pointer;
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 .menu__mobile-button img {
-	width: 50px;
+    width: 50px;
 }
 
 .close-icon {
-	display: none;
+    display: none;
 }
 
 .menu__list {
-	display: flex;
-	gap: 3rem;
-	align-items: center;
+    display: flex;
+    gap: 3rem;
+    align-items: center;
 }
 
 .menu__mobile {
-	display: flex;
-	align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .menu__list-mobile {
-	display: none;
-	flex-direction: column;
-	justify-items: left;
+    display: none;
+    flex-direction: column;
+    justify-items: left;
 }
 
 .main {
-	flex-grow: 1;
-	max-width: var(--layout-width);
-	margin: 0 auto 10rem;
-	padding: 0 2rem;
+    flex-grow: 1;
+    width: 100%;
+    max-width: var(--layout-width);
+    margin: 0 auto 10rem;
+    padding: 0 2rem;
 }
 
 @media screen and (max-width: 640px) {
-	.menu__list {
-		display: none;
-	}
+    .menu__list {
+        display: none;
+    }
 
-	.menu__mobile-button {
-		display: block;
-	}
+    .menu__mobile-button {
+        display: block;
+    }
 
-	.menu__list-mobile.active {
-		display: flex;
-	}
+    .menu__list-mobile.active {
+        display: flex;
+    }
 }
 
