--- a/MySite/style/style.css
+++ b/MySite/style/style.css
@@ -6,7 +6,14 @@
     padding: 10px; 
 }
 
-
+.light-theme {
+    background-color: white;
+    color: black;
+}
+.dark-theme {
+    background-color: black;
+    color: white;
+}
 
 .container {
     display: flex;        
