Создал страницу массивов, сделал дз

--- a/mysite/assets/style/styles.css
+++ b/mysite/assets/style/styles.css
@@ -66,6 +66,16 @@ h2 {
     color: black;
 }
 
+
+.cycles {
+    color: black;
+    font-size: 24px;
+}
+
+.massive {
+    color: black;
+    font-size: 24px;
+}
 /*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*/
 
 .logo {
