--- a/mysite/assets/style/nightTheme.css
+++ b/mysite/assets/style/nightTheme.css
@@ -86,6 +86,11 @@ body {
     font-size: 24px;
 }
 
+.massive {
+    color: mintcream;
+    font-size: 24px;
+}
+
 /*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*//*Картинки*/
 
 .logo {
