--- a/mySite/assets/css/Style.css
+++ b/mySite/assets/css/Style.css
@@ -99,6 +99,12 @@ img{
     top: 50%;
     left: 400px;
 }
+.theme3 {
+    position: absolute;
+    top: 50%;
+    left: 530px;
+}
+
 @media screen and (max-width:800px){
     .main{
         display: flex;
