--- a/assets/css/styleday.css
+++ b/assets/css/styleday.css
@@ -137,7 +137,7 @@ td {
     display: flex;
     height: 100px;
     justify-content: space-between;
-    border-top: 2px solid black;
+    border-top: 2px solid cadetblue;
     padding-top: 20px;
 }
 @media (max-width: 1024px) {
