--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,11 +1,3 @@
-.header {
-  text-align: center;
-  padding: 15px;
-  background: gray;
-  font-size: 20px;
-  border: 1px solid black;
-}
-
 .container {
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -89,6 +81,64 @@
   flex-direction: column;
   align-items: center;
   gap: 15px;
+}
+
+footer {
+  text-align: center;
+  padding: 20px;
+  background: #333;
+  color: white;
+  font-size: 16px;
+  border-top: 2px solid #555;
+}
+
+footer .social-icons {
+  margin-top: 10px;
+}
+
+footer .social-icons a {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+footer .social-icons img {
+  width: 38px;
+  height: 38px;
+}
+
+.header {
+  display: flex;
+  background-color: #f8f9fa;
+  padding: 15px 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.header nav {
+  text-align: center;
+}
+
+.header ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.header ul li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0 15px;
+}
+
+.header ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+  font-weight: 500;
+  transition: color 0.3s ease-in-out;
+}
+
+.header ul li a:hover {
+  color: #007bff;
 }
 
 @media (max-width: 1480px) {
@@ -176,10 +226,6 @@
   color: #000000;
 }
 
-.day-theme .header {
-  background: lightgray;
-}
-
 .day-theme .photo,
 .day-theme .name,
 .day-theme .about,
@@ -191,10 +237,6 @@
 .night-theme {
   background-color: #121212;
   color: #ffffff;
-}
-
-.night-theme .header {
-  background: #333;
 }
 
 .night-theme .photo,
