--- a/public/assets/styles/content.css
+++ b/public/assets/styles/content.css
@@ -19,6 +19,10 @@
     display: none;
 }
 
+.paragraph_color-primary {
+    color: var(--color-primary);
+}
+
 .content-container {
     display: flex;
     justify-content: space-between;
